--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ serde_derive = "1.0"
 serde_json = "1.0"
 qstring = "0.7.2"
 #futures = "0.3"
+jsonwebtoken = "7.2.0"
 
 [build-dependencies]
 tonic-build = "0.8"
