--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,8 @@ prost = "0.11"
 prost-types = "0.11"
 tonic = "0.8"
 consul-rs-plus = { path = "../../github/consul-rs-plus", version = "0.1.7" }
-actix-web = "4"
+#actix-web = "4"
+actix-web = "4.8.0"
 actix-cors = "0.6.5"
 #actix-web = "3"
 async-trait = "0.1.72"
