--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,10 +15,10 @@ tokio = { version = "1.4", features = ["full"] }
 prost = "0.11"
 prost-types = "0.11"
 tonic = "0.8"
-consul-rs-plus = { path = "../../github/consul-rs-plus", version = "0.1.7" }
+#consul-rs-plus = { path = "../../github/consul-rs-plus", version = "0.1.7" }
 #actix-web = "4"
 actix-web = "4.8.0"
-actix-cors = "0.6.5"
+actix-cors = "0.7.0"
 #actix-web = "3"
 async-trait = "0.1.72"
 serde = "1.0"
