--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ serde_json = "1.0"
 qstring = "0.7.2"
 #futures = "0.3"
 jsonwebtoken = "7.2.0"
+futures-util = "0.3.30"
 
 [build-dependencies]
 tonic-build = "0.8"
