middleware sample success

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ qstring = "0.7.2"
 #futures = "0.3"
 jsonwebtoken = "7.2.0"
 futures-util = "0.3.30"
+actix-http = "3.8.0"
 
 [build-dependencies]
 tonic-build = "0.8"
