--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "NeonRabbitGW"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -15,7 +15,7 @@ tokio = { version = "1.4", features = ["full"] }
 prost = "0.11"
 prost-types = "0.11"
 tonic = "0.8"
-#consul-rs-plus = { path = "../../github/consul-rs-plus", version = "0.1.7" }
+consul-rs-plus = { path = "../../github/consul-rs-plus", version = "0.1.8" }
 #actix-web = "4"
 actix-web = "4.8.0"
 actix-cors = "0.7.0"
